bpo-37549: os.dup() fails for standard streams on Windows 7 (GH-15389)

(cherry picked from commit 5be666010e4df65dc4d831435cc92340ea369f94)

Co-authored-by: Zackery Spytz <zspytz@gmail.com>